--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-    "dependencies": {
+  "dependencies": {
+    "connect-redis": "^7.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ioredis": "^5.4.1",
     "mongoose": "^5.11.15",
     "socket.io": "^4.0.0",
-    "dotenv": "^8.2.0",
+    "socket.io-redis": "^6.1.1",
     "webrtc": "^1.0.0"
   },
   "devDependencies": {
