--- a/backend/ docker-compose.yml
+++ b/backend/ docker-compose.yml
@@ -1,15 +1,43 @@
 version: '3'
 services:
-  app:
-    build: .
-    ports:
-      - "3000:3000"
+  app1:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      - MONGO_URI=mongodb://mongo:27017/voice-chat-app
+      - WEB_CONCURRENCY=1
+    ports:
+      - "3001:3000" # تغییر پورت داخلی به 3001
     depends_on:
+      - redis
       - mongo
 
   mongo:
     image: mongo:4.4
     ports:
       - "27017:27017"
+  app2:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - WEB_CONCURRENCY=1
+    ports:
+      - "3002:3000" # تغییر پورت داخلی به 3002
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app1
+      - app2
