--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.11.15",
     "socket.io": "^4.0.0",
     "socket.io-redis": "^6.1.1",
+    "uuid": "^10.0.0",
     "webrtc": "^1.0.0",
     "winston": "^3.13.0"
   },
